Prevent scrollbar from appearing/disappearing on right hand side.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   /* Use System Fonts */
   /* Default: Apple-System, Arial, Helvetica, "PingFang SC", "Hiragino Sans GB",
